Fixed the banner spacing

--- a/css/main.css
+++ b/css/main.css
@@ -139,7 +139,7 @@ background: #333333;
 /* ----------------------------------------------------------*/
 
 .page-content {
-  padding: 30px 0px 0px;
+  padding: 20px 0px 0px;
 min-height: 346px;
 }
 
@@ -546,6 +546,7 @@ color: #4E727E;
     float: right;
     padding: 5px;
     background: rgb(11, 72, 92);
+	margin-bottom:10px;
 }
 
 .slide-image-title {
